completed checkWin function

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@ body {
     border: none;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
     font-size: 8vmin;
+    background-color: whitesmoke;
+    color: black;
+}
+
+.btn:disabled {
+    background-color: whitesmoke;
+    color: black;
 }
 
 #reset {
